--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -17,5 +17,42 @@
         app:titleTextColor="@color/white"
         />
 
+    <TextView
+        android:id="@+id/tvExercisesCompleted"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbarHistory"
+        android:text="@string/exercise_completed"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvHistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/tvExercisesCompleted"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <TextView
+        android:id="@+id/tvNoData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbarHistory"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/no_data_available"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:visibility="visible"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
