--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="main_color">#7400b8</color>
     <color name="grayBG">#121212</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#fff</color>
+    <color name="history_light_gray">#EBEBEB</color>
 
     <color name="colorGray">#B2212121</color>
     <color name="light_gray_ripple">#C4C4C4</color>
